force-app/main/default/objects/Admissions_Settings__mdt.object
<CustomObject>
    <description>Custom metadata type for Admissions team</description>
    <fields>
        <fullName>Admission_Calendar__c</fullName>
        <description>Admission calendar type</description>
        <label>Admission Calendar</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configs__c</fullName>
        <description>JSON Config to store details and use them in code as necessary</description>
        <label>Configs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Messages__c</fullName>
        <description>Maintenance messages JSON body for different components that relies on this meta</description>
        <label>Messages</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of maintenance window- Active, Inactive</description>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teaching_Period_Calendar__c</fullName>
        <description>Teaching period calendar</description>
        <label>Teaching Period Calendar</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Represents type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unit Offerings Mapping</fullName>
                    <default>true</default>
                    <label>Unit Offerings Mapping</label>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Admissions Settings</label>
    <listViews>
        <fullName>Admissions_Settings</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Admission_Calendar__c</columns>
        <columns>Teaching_Period_Calendar__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>Admissions Settings</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Maintenance</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Configs__c</columns>
        <columns>Messages__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Maintenance</value>
        </filters>
        <label>Maintenance</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Admission Settings</pluralLabel>
</CustomObject>